--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: AutoSubmit
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers 10:00 Every day
   schedule:
     - cron: '0 10 * * *'
 
@@ -18,11 +18,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    environment: autosubmit
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Please change this to your repo when copied
       - uses: yukimaikoriya/PKUAutoSubmit-action@master
         with:
           username: ${{ secrets.username }}
