Commented out schedule

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ name: AutoSubmit
 
 # Controls when the action will run. 
 on:
-  # Triggers 10:00 Every day
-  schedule:
-    - cron: '0 10 * * *'
+  # Uncomment following lines to schedule an auto-submit 10:00 Every day
+  #schedule:
+    #- cron: '0 10 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
